; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_websocket.c_ws_send_data.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_websocket.c_ws_send_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ws_send_data(i32* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  store i8* null, i8** %9, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i32, i32* %8, align 4
  %12 = call i8* @sanitize_utf8(i8* %10, i32 %11)
  store i8* %12, i8** %9, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i8*, i8** %9, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @ws_send_frame(i32* %13, i32 %14, i8* %15, i32 %16)
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @free(i8* %18)
  ret i32 0
}

declare dso_local i8* @sanitize_utf8(i8*, i32) #1

declare dso_local i32 @ws_send_frame(i32*, i32, i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
